2008-02-27  Kurt Maute  <kurt@maute.us>
	* src/planner-task-tree.c
	* src/planner-gantt-model.c
	* src/planner-gantt-model.h
	* src/planner-task-view.c:
	Patch to add % complete column to task view.  Original patch by Robert
	Mibus, enhanced by me to allow edit of the % complete column in task
	view.  Bug # 379975


2008-02-15  Maurice van der Pot  <griffon26@kfk4ever.com>

	* src/planner-task-tree.c: (planner_task_tree_indent_task),
	(planner_task_tree_unindent_task),
	(planner_task_tree_move_task_up):
	Keep selection as much as possible when indenting and unindenting.

2008-02-15  Maurice van der Pot  <griffon26@kfk4ever.com>

	* src/eel-canvas-rect.c: (eel_canvas_rect_bounds):
	* src/planner-gantt-chart.c: (gantt_chart_map),
	(gantt_chart_size_allocate), (gantt_chart_reflow_idle),
	(planner_gantt_chart_reflow_now),
	(gantt_chart_project_start_changed),
	(planner_gantt_chart_set_model), (gantt_chart_get_visible_region),
	(gantt_chart_set_zoom):
	* src/planner-gantt-chart.h:
	* src/planner-gantt-row.c: (gantt_row_drag_item_to_pointer),
	(gantt_row_scroll_timeout_cb), (get_drag_spot), (gantt_row_event):
	Allow dragging of duration beyond the window size and show the percentage in
	the status bar when dragging progress.

2008-02-14  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/mime/planner.xml.in: Added indication that mime-type
	application/x-planner is a sub-class of application/xml.

2008-02-14  Maurice van der Pot  <griffon26@kfk4ever.com>

	* configure.in:
	* libplanner/Makefile.am:
	* libplanner/mrp-sql.c: (sql_execute_command), (sql_execute_query),
	(sql_get_last_error), (get_int), (get_id), (get_string),
	(get_boolean), (get_float), (is_field), (get_inserted_id),
	(mrp_sql_init), (sql_read_project), (sql_read_phases),
	(sql_read_property_specs), (sql_read_property_values),
	(sql_read_overriden_day_types), (sql_read_overriden_days),
	(sql_read_day_types), (sql_read_calendars), (sql_read_groups),