@@ -1,3 +1,7 @@
+2008-03-03  Kurt Maute  <kurt@maute.us>
+	* src/planner-task-view.c
+	Patch to correct L10N error per bug # 520064
+
 2008-02-27  Kurt Maute  <kurt@maute.us>
 	* src/planner-task-tree.c
 	* src/planner-gantt-model.c
